PFC/Yocto_Infor/yocto_TXT/output_3193.txt
* Upgrading connman to a version over 1.37 fails to build.
@ 2021-07-05 13:54 imoya
  2021-07-05 14:00 ` [yocto] " Martin Jansa
  0 siblings, 1 reply; 2+ messages in thread
From: imoya @ 2021-07-05 13:54 UTC (permalink / raw)
  To: yocto

[-- Attachment #1: Type: text/plain, Size: 1593 bytes --]

Hi,

I'm trying to upgrade our connman recipe to 1.39 or 1.40 version, but when I try to build our image, it fails in "do_configure" because it can't find libmnl.
This is the exact output of my connman/1.40-r0/build/config.log

configure:14443: checking for libmnl >= 1.0.0
configure:14450: $PKG_CONFIG --exists --print-errors "libmnl >= 1.0.0"
Package libmnl was not found in the pkg-config search path.
Perhaps you should add the directory containing `libmnl.pc'
to the PKG_CONFIG_PATH environment variable
No package 'libmnl' found
configure:14453: $? = 1
configure:14467: $PKG_CONFIG --exists --print-errors "libmnl >= 1.0.0"
Package libmnl was not found in the pkg-config search path.
Perhaps you should add the directory containing `libmnl.pc'
to the PKG_CONFIG_PATH environment variable
No package 'libmnl' found
configure:14470: $? = 1
configure:14484: result: no
No package 'libmnl' found
configure:14500: error: libmnl >= 1.0.0 not found

My libmnl recipe is located inside poky ./poky/meta/recipes-extended/libmnl/libmnl_1.0.4.bb . This error only happens with connman 1.39 or 1.40.
I appreciate any help or suggestions off a better place to ask this questions since is connman related.

Thanks,
Ignacio.


This e-mail message and any files attached may contain information that iRobot Corporation considers confidential and/or proprietary or may later designate as confidential and proprietary. If you are not the intended recipient, please contact the sender and delete the email immediately. Unauthorized use or distribution is strictly prohibited.

[-- Attachment #2: Type: text/html, Size: 4907 bytes --]

^ permalink raw reply	[flat|nested] 2+ messages in thread
* Re: [yocto] Upgrading connman to a version over 1.37 fails to build.
  2021-07-05 13:54 Upgrading connman to a version over 1.37 fails to build imoya
@ 2021-07-05 14:00 ` Martin Jansa
  0 siblings, 0 replies; 2+ messages in thread
From: Martin Jansa @ 2021-07-05 14:00 UTC (permalink / raw)
  To: imoya; +Cc: yocto

[-- Attachment #1: Type: text/plain, Size: 2104 bytes --]

1.40 is already in oe-core master you should be able to backport the recipe
from there.

libnml dependency was already added with wireguard PACKAGECONFIG in 1.38
here:
https://git.openembedded.org/openembedded-core/commit/?id=ce2948af5293258a69a9cfefba9e883cefecac87

On Mon, Jul 5, 2021 at 6:55 AM Moya, Ignacio via lists.yoctoproject.org
<imoya=irobot.com@lists.yoctoproject.org> wrote:

> Hi,
>
> I'm trying to upgrade our connman recipe to 1.39 or 1.40 version, but when
> I try to build our image, it fails in "do_configure" because it can't find
> libmnl.
> This is the exact output of my *connman/1.40-r0/build/config.log*
>
> * configure:14443: checking for libmnl >= 1.0.0 configure:14450:
> $PKG_CONFIG --exists --print-errors "libmnl >= 1.0.0" Package libmnl was
> not found in the pkg-config search path. Perhaps you should add the
> directory containing `libmnl.pc' to the PKG_CONFIG_PATH environment
> variable No package 'libmnl' found configure:14453: $? = 1 configure:14467:
> $PKG_CONFIG --exists --print-errors "libmnl >= 1.0.0" Package libmnl was
> not found in the pkg-config search path. Perhaps you should add the
> directory containing `libmnl.pc' to the PKG_CONFIG_PATH environment
> variable No package 'libmnl' found configure:14470: $? = 1 configure:14484:
> result: no No package 'libmnl' found configure:14500: error: libmnl >=
> 1.0.0 not found *
>
> My libmnl recipe is located inside poky *./poky/meta/recipes-extended/libmnl/libmnl_1.0.4.bb
> <http://libmnl_1.0.4.bb> . *This error only happens with connman 1.39 or
> 1.40.
> I appreciate any help or suggestions off a better place to ask this
> questions since is connman related.
>
> Thanks,
> Ignacio.
>
> *This e-mail message and any files attached may contain information that
> iRobot Corporation considers confidential and/or proprietary or may later
> designate as confidential and proprietary. If you are not the intended
> recipient, please contact the sender and delete the email immediately.
> Unauthorized use or distribution is strictly prohibited.*
>
> 
>
>

[-- Attachment #2: Type: text/html, Size: 5768 bytes --]

^ permalink raw reply	[flat|nested] 2+ messages in thread
end of thread, other threads:[~2021-07-05 14:00 UTC | newest]

Thread overview: 2+ messages (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2021-07-05 13:54 Upgrading connman to a version over 1.37 fails to build imoya
2021-07-05 14:00 ` [yocto] " Martin Jansa

